# dbaas

./: .env.bak  .env.bak3  .env.bak4  .env.example  .gitignore  ARCHITECTURE.md  BACKUP_RESTORE_TESTING.md  CRITICAL_FIXES_COMPLETE.md  CURL_COMMANDS.md  DECLARATIVE_ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  INSTALLATION_GUIDE.md  INTEGRATION_SUMMARY.md  K8S_RETRY_LOGIC_IMPLEMENTATION.md  KUBEDB_SCALING_OPERATIONS.md  MAKEFILE_GUIDE.md  METRICS_SETUP.md  Makefile  OPERATION_WORKER_DETAILED.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_MONITORING.md  PRODUCTION_SCALING_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_KUBEDB.md  README.md  RECONCILIATION_WORKER_IMPROVEMENTS.md  RESOURCE_ALLOCATION_RACE_CONDITION_FIX.md  REVIEW_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SINGLE_POD_ARCHITECTURE_PLAN.md  SINGLE_POD_IMPLEMENTATION_PLAN.md  SINGLE_POD_SETUP.md  UI_GUIDE.md  WORKERS_BRIEF_EXPLANATION.md  curl_commands.sh  delete_all_databases.py  delete_legacy_final.py  (+9 more)
.github/workflows/: ci.yml  daily-build.yml  manual-build.yml  release.yml
app/: main.py
app/api/v1/: auth.py  databases.py  databases_async.py  health.py  providers.py  versions.py
app/config/: allowed_versions.yaml  database.py  logging.py  redis.py  settings.py
app/core/: __init__.py  exceptions.py  lock_manager.py  operation_manager.py  operation_queue.py  state_machine.py
app/models/: __init__.py  auth.py  database.py  operation.py  tenant.py
app/repositories/: models.py
app/schemas/: provider.py
app/services/: audit_service.py  database_service.py  kubedb_installer.py  kubedb_service.py  prometheus_service.py  provider_selector.py  provider_service.py  resource_allocation.py  status_sync_service.py  tenant_service.py  version_cache_service.py  version_filter.py
app/utils/: namespace.py  retry.py  security.py  shutdown.py  version.py
app/workers/: __init__.py  event_watcher.py  leader_election.py  operation_worker.py  reconciliation_worker.py
backup/workers/: operation_worker_legacy.py
backup_before_single_pod/: Dockerfile  docker-compose.yml
backup_before_single_pod/app/: main.py
backup_before_single_pod/app/config/: settings.py
backup_before_single_pod/app/exceptions/: __init__.py
backup_before_single_pod/app/middleware/: auth.py
backup_before_single_pod/app/models/: operation.py
backup_before_single_pod/app/repositories/: models.py
backup_before_single_pod/app/schemas/: provider.py
backup_before_single_pod/app/services/: auth_service.py  metrics.py  (+9 more)
docs/: HLD.md  LLD.md
frontend/: Dockerfile  nginx.conf  vite.config.js
frontend/src/: App.css  App.jsx  Providers.css  Providers.jsx  Root.css  Root.jsx
helm/kubedb-dbaas/: Chart.yaml  values.yaml
k8s/app/: configmap.yaml  deployment.yaml  frontend-deployment.yaml  ingress.yaml  mongodb.yaml  rbac.yaml  redis.yaml  secret.yaml  service.yaml
k8s/monitoring/: GRAFANA_SETUP.md  INSTALLATION.md  README.md  grafana-dashboard-configmap.yaml  grafana-dashboard-database.json  import-dashboard.sh  install-monitoring.sh  kubedb-comprehensive-dashboard.json  kubedb-dbaas-dashboard.json  prometheus-deployment.yaml
scripts/: validate_resource_tracking.py
tests/: conftest.py  test_health.py
(+25 files in other folders)
